# zerr

./: README.md  evaluate.py  individual_length.py  lobe_window_test.py  start.sh  start_cyclicshift.sh  tester.pd
CPP/: meson.build  zerr.h
CPP/CyclicShift/: compile.sh  meson.build
CPP/CyclicShift/src/: cyclicshift.cpp  cyclicshift.h  main.cpp  shifter.cpp  shifter.h
CPP/FluxCompensator/: compile.sh
CPP/FluxCompensator/src/: pixelize.cpp
CPP/PeakShuffle/: compile.sh  meson.build
CPP/PeakShuffle/src/: main.cpp  peakshuffle.cpp  peakshuffle.h
CPP/Pixelize/: meson.build
CPP/Pixelize/src/: main.cpp  pixelize.h
CPP/ThreadWalk/: compile.sh  meson.build
CPP/ThreadWalk/src/: main.cpp  threadwalk.cpp  threadwalk.h
CPP/WaveQuant/: compile.sh  meson.build
CPP/WaveQuant/src/: main.cpp  wavequant.cpp  wavequant.h
CPP/WeightShifter/: compile.sh  meson.build
CPP/WeightShifter/src/: main.cpp  weightshifter.cpp  weightshifter.h
CPP/Zerr/: Zerr.pro  compile.sh  zerr.cpp  zerr.h
CPP/Zerr/src/: zerr.cpp  zerr.h
CPP/common/: averagefilter.cpp  averagefilter.h  featuremachine.cpp  featuremachine.h  frequencytransformer.cpp  frequencytransformer.h  linearinterpolator.cpp  linearinterpolator.h  speaker.cpp  speaker.h  speakermapper.cpp  speakermapper.h  zerr.h  zerrmodule.cpp  zerrmodule.h
Eval/: evaluate.py  index_testing.py  meter.scd  plot_single_frame.py  plot_triangular.py  tester.pd
Python/: plotter.py  sinusoidal.tex  zero-crossings.tex
config/: dev_test.snap  en324.yaml  line.yaml  line_16.yaml  line_8.yaml  multi.snap  quad.yml  test.snap  zerr.yaml  zerr_16.yaml  zerr_4.yaml
